<resources>
    <string name="app_name">Street Workout</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Nutrition</string>
    <string name="title_notifications">Settings</string>
    <string name="title_home_screen">PRACTICE AT HOME</string>
    <string name="title_training_history">HISTORY TRAINING</string>
    <string name="title_user_information_screen">Let us know</string>

    <string name="text_button_hot">hot</string>
    <string name="text_time">MINUTE</string>
    <string name="text_kcal">KCAL</string>
    <string name="text_training">PRACTICE TIMES</string>
    <string name="text_challenge">Challenge</string>
    <string name="text_beginner">Beginner</string>
    <string name="text_normal">Normal</string>
    <string name="text_advance">Advance</string>
    <string name="text_button_start_training">Start training</string>
    <string name="text_button_close">Close</string>
    <string name="text_total_exercise">Total %d exercise</string>
    <string name="text_current_page">%d/%d</string>
    <string name="text_title_rest_training">Rest for a while!</string>
    <string name="text_rest_time">00:30</string>
    <string name="text_button_skip">Skip</string>
    <string name="text_time_plus">+ 20s</string>
    <string name="text_next_exercise">Next:</string>
    <string name="text_time_finish">Total time</string>
    <string name="text_kcal_finish">Kcal</string>
    <string name="text_exercise_finish">Total exercise</string>
    <string name="text_title_finish">Good job, you did it!</string>
    <string name="text_button_update">Update</string>
    <string name="text_unit_of_height">cm</string>
    <string name="text_unit_of_weight">kg</string>
    <string name="text_title_bmi_dialog">BMI (Body Mass Index)</string>
    <string name="text_content_bmi_dialog">The index is calculated based on the ratio of weight to height squared, indicating your current weight status. Compared with standard BMI values, the individual BMI determines whether a person is overweight, underweight or normal weight.</string>
    <string name="text_title_sex">Sex</string>
    <string name="text_title_your_information">Your information</string>
    <string name="text_title_update_information">Update your information</string>
    <string name="text_title_age">Age</string>
    <string name="text_title_weight">Weight</string>
    <string name="text_title_height">Height</string>
    <string name="text_title_bmi">BMI index</string>
    <string name="text_title_settings">Settings</string>
    <string name="text_title_notification_training">Set a schedule to remind you</string>
    <string name="text_title_reset_training">Restart the training process</string>
    <string name="text_radio_button_male">Male</string>
    <string name="text_radio_button_female">Female</string>
    <string name="text_bmi_under_weight_index">Smaller 18,5</string>
    <string name="text_bmi_normal_index">18,5 – 24,9</string>
    <string name="text_bmi_over_weight_index">25 – 29,9</string>
    <string name="text_bmi_obese_index">30 – 34,9</string>
    <string name="text_bmi_extremely_obese_index">Bigger 35</string>
    <string name="text_bmi_under_weight">Under Weight</string>
    <string name="text_bmi_normal">Normal</string>
    <string name="text_bmi_over_weight">Over Weight</string>
    <string name="text_bmi_obese">Obese</string>
    <string name="text_bmi_extremely_obese">Extremely Obese</string>
    <string name="text_user_weight_information">%d KG</string>
    <string name="text_user_height_information">%D CM</string>

    <string name="hint_edit_text_your_height">Your height</string>
    <string name="hint_edit_text_your_weight">Your weight</string>
    <string name="hint_edit_text_your_age">Your age</string>
    <string name="hint_edit_text_add_height">Enter your height</string>
    <string name="hint_edit_text_add_weight">Enter your weight</string>
    <string name="hint_edit_text_add_age">Enter your age</string>

    <string name="error_invalid_age">Invalid age</string>
    <string name="error_invalid_weight">Invalid weight</string>
    <string name="error_invalid_height">Invalid height</string>
    <string name="error_edit_text_empty">You have not entered a value</string>

    <string name="msg_bmi_under_weight">You are a bit thin</string>
    <string name="msg_bmi_normal">You are very balanced</string>
    <string name="msg_bmi_over_weight">You are overweight</string>
    <string name="msg_bmi_obese">You are a bit obese</string>
    <string name="msg_bmi_extremely_obese">You are very obese</string>
    <string name="msg_update_user_information_success">Update information success!</string>
    <string name="msg_reset_history_success">Reset training history success!</string>
</resources>
