<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="userCategory"
        app:title="@string/text_title_your_information">

        <Preference
            app:iconSpaceReserved="false"
            app:key="sex"
            app:title="@string/text_title_sex" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="age"
            app:title="@string/text_title_age" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="weight"
            app:title="@string/text_title_weight" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="height"
            app:title="@string/text_title_height" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="bmi"
            app:title="@string/text_title_bmi" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="settingCategory"
        app:title="@string/text_title_settings">

        <Preference
            app:icon="@drawable/ic_notifications_black_24dp"
            app:key="notification"
            app:title="@string/text_title_notification_training" />

        <Preference
            app:icon="@drawable/ic_baseline_refresh_24"
            app:key="reset"
            app:title="@string/text_title_reset_training" />

    </PreferenceCategory>

</PreferenceScreen>
