<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/text_title_bmi_dialog"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/text_content_bmi_dialog"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonUnderWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textViewContent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintStart_toStartOf="@+id/materialButtonUnderWeight"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonUnderWeight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonOverWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:backgroundTint="@android:color/holo_orange_light"
        app:layout_constraintStart_toStartOf="@+id/materialButtonNormal"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonNormal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonObese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="@+id/materialButtonOverWeight"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonOverWeight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonExtremelyObese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="@+id/materialButtonObese"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonObese"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textViewUnderWeightIndex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bmi_under_weight_index"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/materialButtonUnderWeight"
        app:layout_constraintEnd_toStartOf="@+id/textViewUnderWeight"
        app:layout_constraintStart_toEndOf="@+id/materialButtonUnderWeight"
        app:layout_constraintTop_toTopOf="@+id/materialButtonUnderWeight" />

    <TextView
        android:id="@+id/textViewNormalIndex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bmi_normal_index"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/materialButtonNormal"
        app:layout_constraintEnd_toEndOf="@+id/textViewUnderWeightIndex"
        app:layout_constraintStart_toStartOf="@+id/textViewUnderWeightIndex"
        app:layout_constraintTop_toTopOf="@+id/materialButtonNormal" />

    <TextView
        android:id="@+id/textViewOverWeightIndex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bmi_over_weight_index"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/materialButtonOverWeight"
        app:layout_constraintEnd_toEndOf="@+id/textViewUnderWeightIndex"
        app:layout_constraintStart_toStartOf="@+id/textViewUnderWeightIndex"
        app:layout_constraintTop_toTopOf="@+id/materialButtonOverWeight" />

    <TextView
        android:id="@+id/textViewObeseIndex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bmi_obese_index"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/materialButtonObese"
        app:layout_constraintEnd_toEndOf="@+id/textViewUnderWeightIndex"
        app:layout_constraintStart_toStartOf="@+id/textViewUnderWeightIndex"
        app:layout_constraintTop_toTopOf="@+id/materialButtonObese" />

    <TextView
        android:id="@+id/textViewExtremelyObeseIndex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bmi_extremely_obese_index"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/materialButtonExtremelyObese"
        app:layout_constraintEnd_toEndOf="@+id/textViewUnderWeightIndex"
        app:layout_constraintStart_toStartOf="@+id/textViewUnderWeightIndex"
        app:layout_constraintTop_toTopOf="@+id/materialButtonExtremelyObese" />

    <TextView
        android:id="@+id/textViewUnderWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bmi_under_weight"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/materialButtonUnderWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewUnderWeightIndex"
        app:layout_constraintTop_toTopOf="@+id/materialButtonUnderWeight" />

    <TextView
        android:id="@+id/textViewNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bmi_normal"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/materialButtonNormal"
        app:layout_constraintEnd_toEndOf="@+id/textViewUnderWeight"
        app:layout_constraintStart_toStartOf="@+id/textViewUnderWeight"
        app:layout_constraintTop_toTopOf="@+id/materialButtonNormal" />

    <TextView
        android:id="@+id/textViewOverWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bmi_over_weight"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/materialButtonOverWeight"
        app:layout_constraintEnd_toEndOf="@+id/textViewUnderWeight"
        app:layout_constraintStart_toStartOf="@+id/textViewUnderWeight"
        app:layout_constraintTop_toTopOf="@+id/materialButtonOverWeight" />

    <TextView
        android:id="@+id/textViewObese"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bmi_obese"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/materialButtonObese"
        app:layout_constraintEnd_toEndOf="@+id/textViewUnderWeight"
        app:layout_constraintStart_toStartOf="@+id/textViewUnderWeight"
        app:layout_constraintTop_toTopOf="@+id/materialButtonObese" />

    <TextView
        android:id="@+id/textViewExtremelyObese"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bmi_extremely_obese"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/materialButtonExtremelyObese"
        app:layout_constraintEnd_toEndOf="@+id/textViewUnderWeight"
        app:layout_constraintStart_toStartOf="@+id/textViewUnderWeight"
        app:layout_constraintTop_toTopOf="@+id/materialButtonExtremelyObese" />

</androidx.constraintlayout.widget.ConstraintLayout>
