<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_background_user_information" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorBlurBlackDark"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center"
            android:text="@string/title_user_information_screen"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_30"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAge"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/hint_edit_text_add_age"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
            app:layout_constraintStart_toStartOf="@+id/textViewSex"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/text_title_sex"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radioButtonMale"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/textViewSex"
            app:layout_constraintTop_toBottomOf="@id/textViewSex">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_radio_button_male"
                android:textColor="@android:color/white" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:text="@string/text_radio_button_female"
                android:textColor="@android:color/white" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutWeight"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/hint_edit_text_add_weight"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutAge"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@android:color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewUnitOfWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/text_unit_of_weight"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutWeight"
            app:layout_constraintStart_toEndOf="@+id/textInputLayoutWeight"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutWeight" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutHeight"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/hint_edit_text_add_height"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutAge"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutWeight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@android:color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewUnitOfHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/text_unit_of_height"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/textInputLayoutHeight"
            app:layout_constraintStart_toEndOf="@id/textInputLayoutHeight"
            app:layout_constraintTop_toTopOf="@id/textInputLayoutHeight" />

        <TextView
            android:id="@+id/textViewBmiIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/text_title_bmi"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutAge"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutHeight" />

        <ImageView
            android:id="@+id/imageViewHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/ic_baseline_help_outline_white_24"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@+id/textViewBmiIndex"
            app:layout_constraintStart_toEndOf="@+id/textViewBmiIndex"
            app:layout_constraintTop_toTopOf="@+id/textViewBmiIndex" />

        <TextView
            android:id="@+id/textViewBmiValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toStartOf="@+id/textViewBmiIndex"
            app:layout_constraintTop_toBottomOf="@+id/textViewBmiIndex" />

        <TextView
            android:id="@+id/textViewBmiContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textViewBmiValue"
            app:layout_constraintTop_toTopOf="@+id/textViewBmiValue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonStart"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_20"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/text_button_start_training"
            android:textColor="@android:color/white"
            app:cornerRadius="@dimen/dp_10"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewBmiValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
